--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,10 +1,10 @@
-environment:
-  nodejs_version: "18"
+image: Ubuntu1804  # образ для сборки
+
+stack: node 16  # окружение
 
 branches:
   only:
     - main  # ветка git
-
 
 cache: node_modules  # кеширование
 
@@ -16,5 +16,9 @@ build: off  # отключаем встроенную в appveyor систему
 build_script:
   - npm run build   # команда сборки
 
-test_script:
-  # - npm run lint && npm test  # скрипт тестирования
+deploy_script:  # скрипт развёртывания
+  - git config --global credential.helper store
+  - git config --global user.name AppVeyor
+  - git config --global user.email ci@appveyor.com
+  - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
+  - npx push-dir --dir=dist --branch=gh-pages --force --verbose
